# routingAlgoSolver

./: .gitignore  CMakeLists.txt  README.md
src/app/: Application.cpp  Application.h  Renderer.cpp  Renderer.h  globals.h  main.cpp
src/core/backend/: Edge.cpp  Edge.h  EdgeHelper.cpp  EdgeHelper.h  Graph.cpp  Graph.h  Node.cpp  Node.h  NodeHelper.cpp  NodeHelper.h  graphHandling.h  routingAlgos.cpp  vecMath.h
src/core/frontend/: Button.cpp  Button.h  Checkbox.cpp  Checkbox.h  OutputWindow.cpp  OutputWindow.h  TextCase.cpp  TextCase.h  Window.cpp  Window.h  ui.h
